Fix crash in JSON traversal in Bing potd provider

QJsonArray::operator[] returns QJsonValueRef which seems to crash
when trying to convert to object.
Using QJsonArray::at() instead which returns QJsonValue fixes the crash.

BUG: 378590

Differential Revision: https://phabricator.kde.org/D5478